--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&display=swap');
+@import url(./fonts/stylesheet.css);
+
+*{
+  box-sizing: border-box;
+  font-family: 'M PLUS Rounded 1c', sans-serif;
+}
+
+ul{
+  margin: 0;
+  list-style: none;
+  padding: 0
+}
+
+figcaption{
+  display: none;
+}
+
 .App {
   text-align: center;
 }
@@ -14,25 +32,31 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-image: url(./img/star-pattern.svg);
+  background-color: #235390;
+  min-height: 87.7vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-Footer{
+  padding-top: 80px;
+  background-image: url(./img/star-pattern.svg);
+  background-color: #235390;
+  color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-Footer .listas{
+  padding: 24px 40px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.App-Footer .listas .ListaFooter:nth-last-child(-n+1){
+  padding-right: 0;
 }
